tests/samples/negative/expressions/non_call_expr_stmt.ax
module non_call_expr_stmt;

fn main() -> i32 {
    1 + 2;
    return 0;
}
